--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -328,7 +328,7 @@
 
 <div class="content" role="main">
 
- <app-diretiva-ngclass></app-diretiva-ngclass>
+ <app-diretiva-ngstyle></app-diretiva-ngstyle>
 
    
 
