--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -328,8 +328,7 @@
 
 <div class="content" role="main">
 
- <app-diretiva-ngstyle></app-diretiva-ngstyle>
-
+ <app-operador-elvis></app-operador-elvis>
    
 
   <svg id="clouds" alt="Gray Clouds Background" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
