terminado modulo de diretivas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -328,7 +328,7 @@
 
 <div class="content" role="main">
 
-<app-exemplo-ng-content>
+<!--app-exemplo-ng-content>
   <div class="titulo">
     Titulo do painel
   </div>
@@ -339,7 +339,9 @@
     Conteudo passado para o corpo 2
   </div>
 
-</app-exemplo-ng-content>
+</app-exemplo-ng-content!-->
+
+<app-diretivas-customizadas></app-diretivas-customizadas>
    
 
   <svg id="clouds" alt="Gray Clouds Background" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
